--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,57 @@ html{
 
 body{
   background-color: #040714;
-  color: #f9f9f9;
+  color: rgb(252, 244, 3);
 
   font-family: Avenir-Roman, sans-serif;
   margin:0;
   padding:0;
+}
+
+footer{
+  padding: 1rem 0;
+  color: rgb(252, 244, 3);
+}
+
+footer h2{
+  color: rgb(252, 244, 3);
+}
+
+footer li{
+  list-style: none;
+  font-size: .8rem;
+  font-weight: lighter;
+  cursor: pointer;
+  margin: 1rem 0;
+  color:rgb(252, 244, 3);
+}
+
+footer ul{
+  color: rgb(252, 244, 3);
+}
+
+footer .fontawesome-style{
+  font-size: 2rem;
+  color: rgb(252, 244, 3);
+  width: 0rem;
+  height: 0rem;
+  margin: 2rem 0;
+  cursor: pointer;
+}
+
+footer .fontawesome-style:hover {
+  transition: all 1s;
+  animation: rotatefont 1s linear infinite alternate-reverse;
+  color: rgb(252, 244, 3);
+}
+
+@keyframes rotatefont{
+  0% {
+    transform: scale(0.7);
+  }
+  100%{
+    transform: scale(1.3);
+  }
 }
 
 a {
